<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Safe Me</string>
    <string name="sign_up">Ro\'yxatdan o\'tish</string>
    <string name="sign_in">Kirish</string>
    <string name="create">Yaratish</string>
    <string name="already_login">Ro\'yxatdan o\'tib bo\'lganman</string>
    <string name="please_enter_password">Iltimos, parolni kiriting</string>
    <string name="password_length_must_be_6">Parol uzunligi 6 ta belgidan ko\'p bo\'lishi kerak</string>
    <string name="please_enter_confirm_password">Iltimos, tasdiqlash parolini kiriting</string>
    <string name="confirm_password_contains_invalid_characters">Tasdiqlash parolida ruxsat etilmagan belgilar mavjud</string>
    <string name="password_contains_invalid_characters">Parolda ruxsat etilmagan belgilar mavjud</string>
    <string name="reset_password">Parolni tiklash</string>
    <string name="input_phone_number_to_reset_password">Parolingizni qayta tiklash uchun telefon raqamingizni kiriting</string>
    <string name="passwords_not_match">Tasdiqlash paroli mos kelmadi</string>
    <string name="resend_code">Kodni qayta yuborish</string>
    <string name="internet_not_connected">Internet bog\'lanmagan</string>
    <string name="bad_request">So\'rovda xatolik</string>
    <string name="successfully_changed_passoword">Parol muvaffaqiyatli o\'zgartirildi</string>
    <string name="expired_password">Parolni o\'zgartirish vaqti o\'tgan</string>
    <string name="expired_verification_code">Tasdiqlash kodi vaqti o\'tgan</string>
    <string name="not_confirmed">SMS kod noto\'g\'ri kiritildi</string>
    <string name="not_active">Foydalanuvchi aktiv holatida emas</string>
    <string name="wrong_phone_password">Parol noto\'g\'ri</string>
    <string name="user_not_found">Telefon raqam topilmadi</string>
    <string name="internal_server_error">Serverda xatolik</string>
    <string name="forgot_pin">PIN-kodni yoddan chiqardingizmi?</string>
    <string name="some_error_occurred">Qandaydir xatolik yuz berdi</string>
    <string name="sms_not_sent">SMS yuborilmadi</string>
    <string name="already_exist">Bu telefon raqam allaqachon ro\'yhatdan o\'tgan</string>
    <string name="create_new_password">Yangi parol yarating</string>
    <string name="enter_phone_number_and_password_for_sign_up">Ro\'yxatdan o\'tish uchun telefon raqamingizni va parolingizni kiriting</string>
    <string name="enter_phone_number_and_password_for_sign_in">Kirish uchun telefon raqamingizni va parolingizni kiriting</string>
    <string name="phone_number">Telefon nomer</string>
    <string name="forgot_password">Parolni unutdingizmi?</string>
    <string name="confirmation_code">Tasdiqlash kodi</string>
    <string name="enter_confirmation_code_for_phone_number">%s raqamga yuborilgan maxfiy kodni kiriting</string>
    <string name="continuee">Davom etish</string>
    <string name="deny">Rad etish</string>
    <string name="allow">Ruxsat berish</string>
    <string name="enter_personal_info">Shaxsiy ma\'lumotlaringizni kiriting</string>
    <string name="first_name">Ism</string>
    <string name="last_name">Familiya</string>
    <string name="old_password">Hozirgi parol</string>
    <string name="new_password">Yangi parol</string>
    <string name="re_new_password">Yangi parolni tasdiqlash</string>
    <string name="not_same_new_old_password">Yangi parol eski paroldan farq qilsin</string>
    <string name="same_new_renew_password">Yangi parol maydonlarni bir xil bo\'lishi kerak</string>
    <string name="edit_password_desc">Parolni o\'zgartirish uchun telefon raqamingizni kiriting</string>
    <string name="skip">O\'TKAZISH</string>
    <string name="pin_code">PIN-kod</string>
    <string name="create_pin">Yangi PIN-kod kiriting</string>
    <string name="enter_new_pin">Yangi PIN-kodni kiriting</string>
    <string name="enter_current_pin">PIN-kodni kiriting</string>
    <string name="enter_pin_again">PIN-kodni kiriting</string>
    <string name="reset_pincode">PIN-kodni tiklash</string>
    <string name="confirm_new_pin">PIN-kodni tasdiqlang</string>
    <string name="error_pin">PIN-kod noto\'g\'ri</string>
    <string name="successfully_done">Muvoffaqiyatli bajarildi</string>
    <string name="finger_print">Barmoq izi skaneri</string>
    <string name="finger_print_verify">Barmoq izingizni tasdiqlang</string>
    <string name="cancel">Bekor qilish</string>
    <string name="date_of_birth">Tug\'ilgan sana</string>
    <string name="gender">Jinsi</string>
    <string name="education_title">Ta\'lim:</string>
    <string name="region">Viloyat</string>
    <string name="region_title">Viloyat:</string>
    <string name="district">Tuman</string>
    <string name="district_title">Tuman:</string>
    <string name="mfy">MFY</string>
    <string name="add_information_about_your_child">Farzandingiz haqida ma\'lumot qo\'shing</string>
    <string name="date_of_birth_of_child">Farzandning tug\'ilgan sanasi</string>
    <string name="baby_born_prematurely">Farzand muddatidan oldin tug\'ilgan</string>
    <string name="name_of_child">Farzandning ismi</string>
    <string name="enter_your_child_name">Farzandingizning ismini kiriting</string>
    <string name="select">Tanlang</string>
    <string name="or">YOKI</string>
    <string name="download_with">Quyidagi bilan yuklabsh:</string>
    <string name="you_have_created_your_profile_baby">Siz farzandingiz profilini yaratdingiz!</string>
    <string name="please_check_all_details_baby_before_you_continue">Iltimos, davom etishdan oldin farzandning barcha tafsilotlarini tekshiring!</string>
    <string name="add_a_sister_or_brother">Opa yoki akani qo\'shing</string>
    <string name="recommendations">Tavsiyalar</string>
    <string name="announcements">E\'lonlar</string>
    <string name="chat">Chat</string>
    <string name="game">Game</string>
    <string name="select_lang">Tilni tanlang</string>
    <string name="consultant">Kansultant</string>
    <string name="questionnaire">So\’rovnoma</string>
    <string name="prevention_inspector">Profilaktika inspektori</string>
    <string name="appeals">Murojaatlar</string>
    <string name="settings_drawer">Sozlamalar</string>
    <string name="select_the_type_of_appeal">Murojaat turini kiriting</string>
    <string name="enter_the_name_of_appeal">Murojaat nomini kiriting</string>
    <string name="enter_the_description_of_appeal">Murojaat mazmunini kiriting</string>
    <string name="enter_the_appeal_text">Murojaat matnini kiriting</string>
    <string name="receive_appeal">Murojaat qabul qilindi</string>
    <string name="about_us">Biz haqimizda</string>
    <string name="logout">Chiqish</string>
    <string name="safe_me">Safe me</string>
    <string name="choices">Tanlovlar</string>
    <string name="online_chat">Online chat</string>
    <string name="years_old">%s-%s-yoshlar</string>
    <string name="safe_internet">Xavfsiz internet</string>
    <string name="games">O\'yinlar</string>
    <string name="fake_msg">Yolg\'on xabarlar</string>
    <string name="cybersport">Kibersport</string>
    <string name="cyber_crimes">Kiber-jinoyatlar</string>
    <string name="lang">uz</string>
    <string name="language">Til</string>
    <string name="rights_of_child">Bola huqulari</string>
    <string name="code_of_conduct">Odob-axloq qoidalari</string>
    <string name="inspectors">Inspektorlar</string>
    <string name="calling">Qo\'ng\'iroq qilish</string>
    <string name="telegram">Telegram</string>
    <string name="send">Yuborish</string>
    <string name="write_a_message">Xabar yozing…</string>
    <string name="child_development">Bolaning rivojlanishi</string>
    <string name="sos">SOS</string>
    <string name="there_are_suspicious_circumstances">Shubhali holatlar mavjud</string>
    <string name="i_am_going_into_danger_zone">Xavfli hududga borayapman</string>
    <string name="help_is_needed_now">Xoziroq yordam kerak</string>
    <string name="social_emotional">Ijtimoiy emotsiya</string>
    <string name="cognitive">Kognitiv</string>
    <string name="language_and_communication">Til va aloqa</string>
    <string name="motor_skills">Motor qobiliyatlari</string>
    <string name="recommended_games">Tavsiya etiladigan o\'yinlar</string>
    <string name="share">Ulashish</string>
    <string name="save">Saqlash</string>
    <string name="child_s">Bolaning:</string>
    <string name="date_of_birth_title">Tug\'ilgan sanasi:</string>
    <string name="neighborhood">Mahalla:</string>
    <string name="edit_profile">Profilni tahrirlash</string>
    <string name="my_profile">Mening profilim</string>
    <string name="edit_password">Parolni o\'zgartiring</string>
    <string name="change_password">Parolni o\'zgartirish</string>
    <string name="who_are_you_this_baby">Bu bolaga kim bo\'lib keldingiz?</string>
    <string name="open">Ochish</string>
    <string name="close">Yopish</string>
    <string name="update_canceled">Yangilash bekor qilindi</string>
    <string name="update_success">Muvaffaqiyatni yangilandi!!</string>
    <string name="update_failed">Yangilash amalga oshmadi</string>
    <string name="please_enter_phone">Iltimos, telefon raqamni kiriting</string>
    <string name="password">Parol</string>
    <string name="confirm_password">Parolni tasdiqlang</string>
    <string name="man">Erkak</string>
    <string name="woman">Ayol</string>
    <string name="address">Manzil</string>
    <string name="streen_and_house_number">Ko\'cha va uy</string>
    <string name="add_image">Rasm qo\'shish</string>
    <string name="enter_first_name">Ismni kirirting</string>
    <string name="enter_who_for_this_child">Bu bolaga kimligingizni kiriting</string>
    <string name="enter_last_name">Familiyani kirirting</string>
    <string name="enter_date_of_birth">Tug\'ilgan sanani kiriting</string>
    <string name="enter_region">Viloyatni kiriting</string>
    <string name="enter_district">Tumanni kiriting</string>
    <string name="enter_mfy">Mahallani kiriting</string>
    <string name="enter_address">Manzilni kiriting</string>
    <string name="regions_not_found">Viloyatlar topilmadi</string>
    <string name="districts_not_found">Tumanlar topilmadi</string>
    <string name="mfys_not_found">Mahallalar topilmadi</string>
    <string name="region_of_residence">Yashash viloyati</string>
    <string name="district_of_residence">Yashash tumani</string>
    <string name="mfy_of_residence">Yashash mahallasi</string>
    <string name="open_gallery">Galereyani ochish</string>
    <string name="open_camera">Kamerani ochish</string>
    <string name="permission_is_required">Ushbu oynada to\'liq ishlash uchun maxsus ruxsatlar kerak. Ushbu ilova sozlamalaridan maxsus ruxsatlarni bering.</string>
    <string name="permission_required_title">Ruxsat</string>
    <string name="go_to_settings">Sozlamalar</string>
    <string name="permission_denied">Ruxsat berilmagan</string>
    <string name="select_file">Rasm tanlang</string>
    <string name="you_cannot_upload_large_file">Siz %s mb dan katta faylni yuklay olmaysiz</string>
    <string name="file_not_exist">Fayl mavjud emas</string>
    <string name="videopodkat">Videopodkat</string>
    <string name="videopd_desc">Бухоро вилояти ёшлари итирокида “Кибержиноятлардан химояланиш буйича очик мулокот”</string>
    <string name="date_sample">12.03.2023</string>
    <string name="viewed_count">152</string>
    <string name="children_rules">Bola huquqlari</string>
    <string name="share_text">Ulashish</string>
    <string name="save_text">Saqlash</string>
    <string name="game_title">Ijtimoiy-emotsional</string>
    <string name="game_title2">Birgalikda tomosha qilish va o\'ynash kabi yaxshi hislatlarning davomiyligini</string>
    <string name="prominent_disclosure">Safeme sos holatda yordam berish uchun foydalanuvchini fondagi lokatsiya ishlatgan holda joylashuv ma\’lumotlaridan foydalanadi, ilova yopiq yoki ishlatilmayotgan bo\’lsa ham va reklamani qo\’llab quvvatlamaydi</string>
</resources>