<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:padding="@dimen/padding_standard"
    tools:context=".presentation.ui.screen.LoginStep2Screen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_standard">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:fontFamily="@font/roboto_medium_title"
                android:text="@string/you_have_created_your_profile_baby"
                android:textColor="@color/text_title_color"
                android:textSize="@dimen/text_title_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/please_check_all_details_baby_before_you_continue"
                android:textColor="@color/text_title_color"
                android:textSize="@dimen/text_regular_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:background="@drawable/bg_border_enable"
                android:paddingVertical="@dimen/padding_standard"
                android:paddingStart="@dimen/padding_standard"
                android:paddingEnd="@dimen/padding_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc">

                <TextView
                    android:id="@+id/tvNameOfChild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/name_of_child"
                    android:textColor="@color/text_title_color"
                    android:textSize="@dimen/text_regular_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small2"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/date_of_birth_of_child"
                    android:textColor="@color/text_regular_color"
                    android:textSize="@dimen/text_regular_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNameOfChild" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnEditPen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/padding_small"
                    android:paddingVertical="@dimen/padding_middle"
                    android:src="@drawable/ic_edit_pen"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddSisterBrother"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard"
                android:textAllCaps="false"
                android:background="@drawable/bg_border_enable"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/add_a_sister_or_brother"
                android:textColor="@color/main_green_color"
                android:textSize="@dimen/text_small_size"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:background="@drawable/bg_button"
                android:textAllCaps="false"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/continuee"
                android:textSize="@dimen/text_small_size"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>