<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.ui.screen.main.SosScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_standard">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/padding_small"
                android:src="@drawable/ic_arrow_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium_title"
                android:paddingHorizontal="@dimen/padding_middle"
                android:text="@string/sos"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title_size" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_standard"
        android:gravity="center"
        android:fontFamily="@font/roboto_medium_title"
        android:paddingHorizontal="@dimen/padding_middle"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="72sp" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:background="@drawable/bg_button_yellow"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/there_are_suspicious_circumstances"
        android:textColor="@color/text_dark_red_color_d"
        android:textSize="@dimen/text_regular_big_size" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginVertical="@dimen/margin_big"
        android:background="@drawable/bg_button_orange"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/i_am_going_into_danger_zone"
        android:textColor="@color/text_dark_red_color_l"
        android:textSize="@dimen/text_regular_big_size" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginBottom="@dimen/margin_standard"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:background="@drawable/bg_button_red"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/help_is_needed_now"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_big_size" />

</androidx.appcompat.widget.LinearLayoutCompat>