<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dialog_back"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:id="@+id/dialog_prom_disc"
        android:src="@drawable/safeme_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="300dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_prom_disc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/prominent_disclosure"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium_title"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:id="@+id/dialog_text"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        app:cornerRadius="8dp"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/deny"
        android:id="@+id/deny_btn"
        android:textColor="@color/bg_dark_blue_color"
        android:textAllCaps="false"
        android:textSize="@dimen/text_small_size"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/allow_btn"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        app:cornerRadius="8dp"
        android:text="@string/allow"
        android:id="@+id/allow_btn"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_small_size"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/logo_color"
        app:layout_constraintTop_toBottomOf="@id/dialog_text"
        app:layout_constraintLeft_toRightOf="@id/deny_btn"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/deny_btn"
        app:layout_constraintLeft_toLeftOf="@id/deny_btn"
        app:layout_constraintRight_toRightOf="@id/deny_btn"
        />


</androidx.constraintlayout.widget.ConstraintLayout>