<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/game_rec_layout"
    android:layout_marginTop="@dimen/margin_standard"
    app:cardCornerRadius="@dimen/margin_middle"
    android:layout_marginStart="@dimen/margin_standard"
    android:layout_marginEnd="@dimen/margin_standard"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:id="@+id/material_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            app:cardCornerRadius="@dimen/margin_very_small2"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/game_image"
                tools:src="@drawable/cyber"
                android:scaleType="centerCrop"
                />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_title"
            android:textColor="@color/text_regular_color"
            android:id="@+id/game_title"
            android:layout_marginTop="@dimen/margin_standard"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium_title"
            app:layout_constraintTop_toBottomOf="@id/material_image"
            app:layout_constraintLeft_toLeftOf="@id/material_image"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_title2"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium_title"
            android:textSize="16sp"
            android:id="@+id/game_title2"
            app:layout_constraintTop_toBottomOf="@id/game_title"
            app:layout_constraintLeft_toLeftOf="@id/game_title"
            android:layout_marginTop="@dimen/margin_very_small2"
            />
        
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:drawableLeft="@drawable/share_btn"
            android:layout_marginTop="23dp"
            android:text="@string/share_text"
            android:textAllCaps="false"
            app:rippleColor="@color/ripple_color1"
            app:cornerRadius="5dp"
            android:id="@+id/share_btn"
            android:textSize="12sp"
            android:backgroundTint="@color/share_back_color"
            app:layout_constraintTop_toBottomOf="@id/game_title2"
            app:layout_constraintLeft_toLeftOf="@id/game_title2"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:insetTop="0dp"
            app:rippleColor="@color/ripple_color1"
            app:layout_constraintTop_toTopOf="@id/share_btn"
            app:layout_constraintBottom_toBottomOf="@id/share_btn"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="@dimen/margin_standard"
            android:id="@+id/star_btn"
            app:cornerRadius="5dp"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:text="@string/save_text"
            android:insetBottom="0dp"
            android:drawableLeft="@drawable/star_btn"
            android:backgroundTint="@color/button_yellow_color"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_standard"
            app:layout_constraintTop_toBottomOf="@id/share_btn"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>